# 42-python_piscine

day0_starting/: README.md  REAME.md
day0_starting/ex00/: Hello.py
day0_starting/ex01/: format_ft_time.py
day0_starting/ex02/: find_ft_type.py  tester.py
day0_starting/ex03/: NULL_not_found.py
day0_starting/ex04/: whatis.py
day0_starting/ex05/: building.py
day0_starting/ex06/: filterstring.py  ft_filter.py
day0_starting/ex07/: sos.py
day0_starting/ex08/: loading.py  tester.py
day0_starting/ex09/: LICENSE  README.md  pyproject.toml  tester.py
day0_starting/ex09/ft_package_vbartos42/: useless_function.py
day1_array/: README.md
day1_array/ex00/: give_bmi.py  tester.py
day1_array/ex01/: array2D.py  tester.py
day1_array/ex02/: load_image.py  tester.py
day1_array/ex03/: load_image.py  tester.py  zoom.py
